# talkeo

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  litellm_config.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
app/: main.py
app/agent/: __init__.py  fakes.py  leo.py  main.py  pipeline.py
app/api/: deps.py  sse.py
app/api/v1/: __init__.py  health.py  stream.py  transform.py  tts.py
app/application/: cards.py  improvements.py  prompts.py  transform_service.py
app/core/: config.py  logging.py
app/domain/providers/: __init__.py  errors.py  llm.py  messages.py  stt.py  tts.py
app/infrastructure/providers/: __init__.py
app/infrastructure/providers/llm/: fake.py  litellm.py  registry.py
app/infrastructure/providers/stt/: fake.py  registry.py
app/infrastructure/providers/tts/: fake.py  (+3 more)
docs/: architecture.md
docs/adrs/: 001-layered-architecture.md  002-provider-ports-adapters.md  003-prompts-as-data.md  004-postgres-schemas-per-context.md  005-strangler-fig-migration.md  006-db-design-principles.md  007-testing-strategy-pr-conventions.md  008-llm-gateway-and-speech-engines.md  README.md
prompts/leo/: system.md
prompts/transform/: explain.md  improve.md  translate.md
tests/: conftest.py
tests/unit/: test_agent_pipeline.py  test_agent_worker.py  test_fake_providers.py  test_fish_tts_adapter.py  test_health.py  test_litellm_adapter.py  test_livekit_tts_adapter.py  test_prompts.py  test_provider_registry.py  test_sse.py  test_stream.py  test_transform_endpoint.py  test_transform_service.py  test_tts_endpoint.py
