[project]
name = "talkeo"
version = "0.0.1"
description = "Backend API for the Talkeo ecosystem — provider-agnostic LLM, STT, and TTS."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "livekit-agents>=1.0",
    "livekit-plugins-cartesia>=1.0",
    "livekit-plugins-deepgram>=1.0",
    "livekit-plugins-elevenlabs>=1.0",
    "livekit-plugins-openai>=1.0",
    "livekit-plugins-silero>=1.0",
    "openai>=1.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "structlog>=24.1",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/talkeo-ai/talkeo"
Repository = "https://github.com/talkeo-ai/talkeo"
Issues = "https://github.com/talkeo-ai/talkeo/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[dependency-groups]
dev = [
    "litellm[proxy]>=1.89.4",
]
